add filter support for first submeu admin label

--- a/assets/css/admin/welcome-screen/welcome.css
+++ b/assets/css/admin/welcome-screen/welcome.css
@@ -9,55 +9,55 @@
   filter: grayscale(90%);
 }
 
-body.toplevel_page_woostify-welcome {
+body.toplevel_page_woostify-welcome #wpcontent, body.woostify-options_page_ajax-search-product-settings #wpcontent {
+  padding: 0;
+}
+
+.woostify-options-wrap {
   /* List pro feature */
   /* notice */
 }
 
-body.toplevel_page_woostify-welcome #wpcontent {
-  padding: 0;
-}
-
-body.toplevel_page_woostify-welcome .woostify-options-wrap a {
+.woostify-options-wrap a {
   text-decoration: none;
   outline: none !important;
 }
 
-body.toplevel_page_woostify-welcome .woostify-options-wrap a:focus {
+.woostify-options-wrap a:focus {
   box-shadow: none !important;
 }
 
-body.toplevel_page_woostify-welcome .woostify-welcome-container {
+.woostify-options-wrap .woostify-welcome-container {
   max-width: 930px;
   margin: 0 auto;
   padding: 0 15px;
 }
 
-body.toplevel_page_woostify-welcome .woostify-welcome-theme-brand {
+.woostify-options-wrap .woostify-welcome-theme-brand {
   max-width: 200px;
 }
 
-body.toplevel_page_woostify-welcome .woostify-welcome-nav {
+.woostify-options-wrap .woostify-welcome-nav {
   background-color: #fff;
   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.1);
 }
 
 @media (max-width: 719px) {
-  body.toplevel_page_woostify-welcome .woostify-welcome-nav {
+  .woostify-options-wrap .woostify-welcome-nav {
     padding: 15px 0;
     text-align: center;
   }
 }
 
 @media (min-width: 720px) {
-  body.toplevel_page_woostify-welcome .woostify-welcome-nav .woostify-welcome-container {
+  .woostify-options-wrap .woostify-welcome-nav .woostify-welcome-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
   }
 }
 
-body.toplevel_page_woostify-welcome .woostify-welcome-nav .woostify-welcome-theme-brand {
+.woostify-options-wrap .woostify-welcome-nav .woostify-welcome-theme-brand {
   display: inline-flex;
   align-items: center;
   color: #333;
@@ -66,7 +66,7 @@ body.toplevel_page_woostify-welcome .woostify-welcome-nav .woostify-welcome-them
 }
 
 @media (max-width: 719px) {
-  body.toplevel_page_woostify-welcome .woostify-welcome-nav .woostify-welcome-theme-brand {
+  .woostify-options-wrap .woostify-welcome-nav .woostify-welcome-theme-brand {
     border-bottom: 1px solid #f4f4f4;
     padding-bottom: 25px;
     margin-bottom: 15px;
@@ -74,28 +74,28 @@ body.toplevel_page_woostify-welcome .woostify-welcome-nav .woostify-welcome-them
   }
 }
 
-body.toplevel_page_woostify-welcome .woostify-welcome-nav .woostify-welcome-theme-icon {
+.woostify-options-wrap .woostify-welcome-nav .woostify-welcome-theme-icon {
   max-width: 30px;
   max-height: 40px;
   position: relative;
   transform: rotate(-20deg);
 }
 
-body.toplevel_page_woostify-welcome .woostify-welcome-nav .woostify-welcome-theme-title {
+.woostify-options-wrap .woostify-welcome-nav .woostify-welcome-theme-title {
   margin: 0 10px 0 5px;
   text-transform: uppercase;
   font-weight: 700;
   color: #463fba;
 }
 
-body.toplevel_page_woostify-welcome .woostify-welcome-nav .woostify-welcome-theme-version {
+.woostify-options-wrap .woostify-welcome-nav .woostify-welcome-theme-version {
   background-color: #e5e5e5;
   border-radius: 2px;
   font-size: 0.65em;
   padding: 2px 5px;
 }
 
-body.toplevel_page_woostify-welcome .woostify-welcome-nav .woostify-welcome-nav__version {
+.woostify-options-wrap .woostify-welcome-nav .woostify-welcome-nav__version {
   color: #fff;
   display: inline-block;
   padding: 0.5em 0;
@@ -103,98 +103,98 @@ body.toplevel_page_woostify-welcome .woostify-welcome-nav .woostify-welcome-nav_
 }
 
 @media (max-width: 719px) {
-  body.toplevel_page_woostify-welcome .woostify-welcome-nav .woostify-welcome-nav_link {
+  .woostify-options-wrap .woostify-welcome-nav .woostify-welcome-nav_link {
     margin: 0;
   }
 }
 
-body.toplevel_page_woostify-welcome .woostify-welcome-nav .woostify-welcome-nav_link li {
+.woostify-options-wrap .woostify-welcome-nav .woostify-welcome-nav_link li {
   display: inline-block;
 }
 
-body.toplevel_page_woostify-welcome .woostify-welcome-nav .woostify-welcome-nav_link li:last-of-type a {
+.woostify-options-wrap .woostify-welcome-nav .woostify-welcome-nav_link li:last-of-type a {
   padding-right: 0;
 }
 
-body.toplevel_page_woostify-welcome .woostify-welcome-nav .woostify-welcome-nav_link a {
+.woostify-options-wrap .woostify-welcome-nav .woostify-welcome-nav_link a {
   text-decoration: none;
   display: block;
   padding: 0.5em;
 }
 
-body.toplevel_page_woostify-welcome .woostify-welcome-nav .woostify-welcome-nav_link a:hover {
+.woostify-options-wrap .woostify-welcome-nav .woostify-welcome-nav_link a:hover {
   color: #000;
 }
 
 @media (min-width: 719px) {
-  body.toplevel_page_woostify-welcome .woostify-welcome-nav .woostify-welcome-nav_link a {
+  .woostify-options-wrap .woostify-welcome-nav .woostify-welcome-nav_link a {
     color: #333;
     padding: 1em;
   }
 }
 
-body.toplevel_page_woostify-welcome .woostify-welcome-nav ul,
-body.toplevel_page_woostify-welcome .woostify-welcome-nav li {
+.woostify-options-wrap .woostify-welcome-nav ul,
+.woostify-options-wrap .woostify-welcome-nav li {
   list-style: none;
   padding: 0;
 }
 
-body.toplevel_page_woostify-welcome .woostify-welcome-nav li {
+.woostify-options-wrap .woostify-welcome-nav li {
   display: inline-block;
   margin: 0;
 }
 
-body.toplevel_page_woostify-welcome .woostify-enhance {
+.woostify-options-wrap .woostify-enhance {
   margin-top: 4em;
 }
 
 @media (min-width: 1140px) {
-  body.toplevel_page_woostify-welcome .woostify-enhance {
+  .woostify-options-wrap .woostify-enhance {
     margin: 4em 0px;
   }
 }
 
-body.toplevel_page_woostify-welcome .woostify-enhance:after {
+.woostify-options-wrap .woostify-enhance:after {
   content: '';
   clear: both;
   display: block;
 }
 
-body.toplevel_page_woostify-welcome .woostify-enhance .woostify-welcome-container {
+.woostify-options-wrap .woostify-enhance .woostify-welcome-container {
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
 }
 
 @media (max-width: 1140px) {
-  body.toplevel_page_woostify-welcome .woostify-enhance .woostify-welcome-container {
+  .woostify-options-wrap .woostify-enhance .woostify-welcome-container {
     flex-wrap: wrap;
     justify-content: center;
   }
 }
 
-body.toplevel_page_woostify-welcome .woostify-enhance .woostify-enhance-content {
+.woostify-options-wrap .woostify-enhance .woostify-enhance-content {
   width: 100%;
 }
 
 @media (min-width: 1140px) {
-  body.toplevel_page_woostify-welcome .woostify-enhance .woostify-enhance-content {
+  .woostify-options-wrap .woostify-enhance .woostify-enhance-content {
     max-width: 600px;
     margin-right: 20px;
   }
 }
 
-body.toplevel_page_woostify-welcome .woostify-enhance .woostify-enhance-sidebar {
+.woostify-options-wrap .woostify-enhance .woostify-enhance-sidebar {
   width: 100%;
 }
 
 @media (min-width: 1140px) {
-  body.toplevel_page_woostify-welcome .woostify-enhance .woostify-enhance-sidebar {
+  .woostify-options-wrap .woostify-enhance .woostify-enhance-sidebar {
     max-width: 350px;
   }
 }
 
-body.toplevel_page_woostify-welcome .woostify-enhance .woostify-enhance__column {
+.woostify-options-wrap .woostify-enhance .woostify-enhance__column {
   border: 1px solid #d8e2e9;
   width: 100%;
   background: #fff;
@@ -202,12 +202,12 @@ body.toplevel_page_woostify-welcome .woostify-enhance .woostify-enhance__column 
 }
 
 @media (min-width: 720px) {
-  body.toplevel_page_woostify-welcome .woostify-enhance .woostify-enhance__column {
+  .woostify-options-wrap .woostify-enhance .woostify-enhance__column {
     margin-bottom: 20px;
   }
 }
 
-body.toplevel_page_woostify-welcome .woostify-enhance .woostify-enhance__column .wst-flex {
+.woostify-options-wrap .woostify-enhance .woostify-enhance__column .wst-flex {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
@@ -215,34 +215,34 @@ body.toplevel_page_woostify-welcome .woostify-enhance .woostify-enhance__column 
   justyfy-content: space-between;
 }
 
-body.toplevel_page_woostify-welcome .woostify-enhance .woostify-enhance__column .wst-flex .link-to-customie-item {
+.woostify-options-wrap .woostify-enhance .woostify-enhance__column .wst-flex .link-to-customie-item {
   margin: 10px 0;
   width: 100%;
 }
 
-body.toplevel_page_woostify-welcome .woostify-enhance .woostify-enhance__column .wst-flex .link-to-customie-item.disabled {
+.woostify-options-wrap .woostify-enhance .woostify-enhance__column .wst-flex .link-to-customie-item.disabled {
   filter: grayscale(100%);
   cursor: default;
 }
 
-body.toplevel_page_woostify-welcome .woostify-enhance .woostify-enhance__column .wst-flex .link-to-customie-item.disabled a {
+.woostify-options-wrap .woostify-enhance .woostify-enhance__column .wst-flex .link-to-customie-item.disabled a {
   pointer-events: none;
 }
 
-body.toplevel_page_woostify-welcome .woostify-enhance .woostify-enhance__column .wst-flex .link-to-customie-item a:hover {
+.woostify-options-wrap .woostify-enhance .woostify-enhance__column .wst-flex .link-to-customie-item a:hover {
   opacity: 0.7;
 }
 
 @media (min-width: 720px) {
-  body.toplevel_page_woostify-welcome .woostify-enhance .woostify-enhance__column .wst-flex .link-to-customie-item:nth-child(odd) {
+  .woostify-options-wrap .woostify-enhance .woostify-enhance__column .wst-flex .link-to-customie-item:nth-child(odd) {
     width: 74%;
   }
-  body.toplevel_page_woostify-welcome .woostify-enhance .woostify-enhance__column .wst-flex .link-to-customie-item:nth-child(even) {
+  .woostify-options-wrap .woostify-enhance .woostify-enhance__column .wst-flex .link-to-customie-item:nth-child(even) {
     width: 26%;
   }
 }
 
-body.toplevel_page_woostify-welcome .woostify-enhance .woostify-enhance__column h3 {
+.woostify-options-wrap .woostify-enhance .woostify-enhance__column h3 {
   font-size: 1.1em;
   font-weight: 600;
   color: #383838;
@@ -251,73 +251,73 @@ body.toplevel_page_woostify-welcome .woostify-enhance .woostify-enhance__column 
   margin: 0;
 }
 
-body.toplevel_page_woostify-welcome .woostify-enhance .woostify-enhance__column img {
+.woostify-options-wrap .woostify-enhance .woostify-enhance__column img {
   width: 100%;
   height: auto;
   margin-bottom: 1.5em;
 }
 
-body.toplevel_page_woostify-welcome .woostify-enhance .woostify-bundle,
-body.toplevel_page_woostify-welcome .woostify-enhance .woostify-pro-featured {
+.woostify-options-wrap .woostify-enhance .woostify-bundle,
+.woostify-options-wrap .woostify-enhance .woostify-pro-featured {
   padding-bottom: 0.5em;
 }
 
-body.toplevel_page_woostify-welcome .woostify-enhance .woostify-bundle .bundle-image {
+.woostify-options-wrap .woostify-enhance .woostify-bundle .bundle-image {
   display: block;
   background: #f7f7f7;
   margin-bottom: 1.5em;
 }
 
-body.toplevel_page_woostify-welcome .woostify-enhance .woostify-bundle .bundle-image img {
+.woostify-options-wrap .woostify-enhance .woostify-bundle .bundle-image img {
   display: block;
   max-width: 75%;
   margin: 0 auto;
 }
 
-body.toplevel_page_woostify-welcome a.woostify-button.disabled {
+.woostify-options-wrap a.woostify-button.disabled {
   cursor: default;
   color: #c8d7e1;
 }
 
-body.toplevel_page_woostify-welcome a.woostify-button.disabled:hover {
+.woostify-options-wrap a.woostify-button.disabled:hover {
   border-color: #c8d7e1;
   box-shadow: 0 1px 0 #c8d7e1;
 }
 
-body.toplevel_page_woostify-welcome .automattic {
+.woostify-options-wrap .automattic {
   text-align: center;
   clear: both;
 }
 
-body.toplevel_page_woostify-welcome .automattic p {
+.woostify-options-wrap .automattic p {
   font-size: 0.75em;
   letter-spacing: 1px;
   text-transform: uppercase;
   color: #aaa;
 }
 
-body.toplevel_page_woostify-welcome .automattic img {
+.woostify-options-wrap .automattic img {
   max-height: 9px;
   margin: 0 ms(-3);
   margin-top: -3px;
   opacity: 0.5;
 }
 
-body.toplevel_page_woostify-welcome .wf-quick-setting-section {
+.woostify-options-wrap .wf-quick-setting-section {
   margin: 1em 0;
   padding: 0 1.5em;
 }
 
-body.toplevel_page_woostify-welcome .pro-featured-list {
+.woostify-options-wrap .pro-featured-list {
   padding-bottom: 0 !important;
 }
 
-body.toplevel_page_woostify-welcome .pro-featured-list .wf-quick-setting-section {
+.woostify-options-wrap .pro-featured-list .wf-quick-setting-section {
   margin: 0;
   padding: 0;
 }
 
-body.toplevel_page_woostify-welcome .pro-featured-list .pro-featured-item {
+.woostify-options-wrap .pro-featured-list .pro-featured-item {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -325,17 +325,17 @@ body.toplevel_page_woostify-welcome .pro-featured-list .pro-featured-item {
   padding: 1em 1.5em;
 }
 
-body.toplevel_page_woostify-welcome .pro-featured-list .pro-featured-item:last-of-type {
+.woostify-options-wrap .pro-featured-list .pro-featured-item:last-of-type {
   border-bottom: 0;
 }
 
 @media (min-width: 720px) {
-  body.toplevel_page_woostify-welcome .woostify-learn-more {
+  .woostify-options-wrap .woostify-learn-more {
     float: right;
   }
 }
 
-body.toplevel_page_woostify-welcome #wpbody-content .notice {
+.woostify-options-wrap #wpbody-content .notice {
   margin-bottom: 10px;
 }
 
